--- a/Shikhai/Views/Catalog/_HomePageSearch.cshtml
+++ b/Shikhai/Views/Catalog/_HomePageSearch.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Shikhai.Models.HomePageSearch
 
-@using (Html.BeginForm("Create", "Newspapers", FormMethod.Post, new { enctype = "multipart/form-data", autocomplete = "on", oninput = "myAmountLimit1()" }))
+@using (Html.BeginForm("Index", "Tutors", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
