--- a/Shikhai/Views/Home/FAQStudents.cshtml
+++ b/Shikhai/Views/Home/FAQStudents.cshtml
@@ -9,7 +9,7 @@
                 <div class="ui styled accordion">
                     <div class="title active">
                         <i class="dropdown icon"></i>
-                        1.	How does Superior Learning work?
+                        1.	How does gradeXL Learning work?
                     </div>
                     <div class="content active">
                         <p class="transition ">
@@ -41,7 +41,7 @@
                         4.	What if I don't like the tutor?
                     </div> <div class="content">
                         <p class="transition ">
-                            We continuously do our best to ensure that our tutors possess the highest level of educational and personal attributes. However, if you feel that your tutor is not your right match, please look for another tutor that better matches your needs and email our Support Team at info@superiorlearning.ca so we can investigate your request.
+                            We continuously do our best to ensure that our tutors possess the highest level of educational and personal attributes. However, if you feel that your tutor is not your right match, please look for another tutor that better matches your needs and email our Support Team at info@gradeXLlearning.ca so we can investigate your request.
                         </p>
                     </div>
                     <div class="title">
@@ -57,8 +57,8 @@
                         7.	Can I give feedback on my tutor?
                     </div> <div class="content">
                         <p class="transition ">
-                            Absolutely and we encourage it. There are two ways you can submit a feedback. One is for Superior Learning as a whole and the second is for your tutor. <br>
-                            <br>For Superior Learning<br>You can submit your feedback about our services and your experiences working with us. Visit our Testimonials page and submit a review by clicking Give My Feedback. Once submitted, it is reviewed by us to ensure it adheres to our terms. <br><br>For Specific Tutor<br>Students can provide their feedback on their tutors up to 30 days after the completion of their last session. When a review has been submitted, it is examined by us to ensure its compliance with our terms. Once approved, it is posted on the tutor's profile page for potential students to view.
+                            Absolutely and we encourage it. There are two ways you can submit a feedback. One is for gradeXL Learning as a whole and the second is for your tutor. <br>
+                            <br>For gradeXL Learning<br>You can submit your feedback about our services and your experiences working with us. Visit our Testimonials page and submit a review by clicking Give My Feedback. Once submitted, it is reviewed by us to ensure it adheres to our terms. <br><br>For Specific Tutor<br>Students can provide their feedback on their tutors up to 30 days after the completion of their last session. When a review has been submitted, it is examined by us to ensure its compliance with our terms. Once approved, it is posted on the tutor's profile page for potential students to view.
                         </p>
                     </div>
                     <div class="title">
@@ -66,7 +66,7 @@
                         8.	The tutor did not respond. What should I do?
                     </div> <div class="content">
                         <p class="transition ">
-                            We constantly work to ensure that our tutors' list remains updated and avoid this from occurring. However, if this incident does occur, email our Team at info@superiorlearning.ca and we will do our best to connect you with our other qualified tutors at the earliest opportunity.
+                            We constantly work to ensure that our tutors' list remains updated and avoid this from occurring. However, if this incident does occur, email our Team at info@gradeXLlearning.ca and we will do our best to connect you with our other qualified tutors at the earliest opportunity.
                         </p>
                     </div>
                     <div class="title">
@@ -74,7 +74,7 @@
                         9.	I cannot find a tutor for my subject. What should I do?
                     </div> <div class="content">
                         <p class="transition ">
-                            No worries. Please send our Support Team an email at info@superiorlearning.ca and we will be pleased to help you find your ideal tutor.
+                            No worries. Please send our Support Team an email at info@gradeXLlearning.ca and we will be pleased to help you find your ideal tutor.
                         </p>
                     </div>
                     <div class="title">
@@ -82,21 +82,21 @@
                         10.	Would I receive any resources/homework after the completion of a session?
                     </div> <div class="content">
                         <p class="transition ">
-                            Please notify your tutor prior or during the session. You may also email our Support Team at info@superiorlearning.ca for practice worksheets.
+                            Please notify your tutor prior or during the session. You may also email our Support Team at info@gradeXLlearning.ca for practice worksheets.
                             Please note this service is only applicable to clients using our platform.
                         </p>
                     </div>
                     <div class="title">
                         <i class="dropdown icon"></i>
-                        11.	What is Superior Learning's cancellation policy?
+                        11.	What is gradeXL Learning's cancellation policy?
                     </div> <div class="content">
                         <p class="transition ">
-                            Each tutor on Superior Learning set their own cancellation policies. You can view their cancellation policies on their page, under the Profile tab. We recommend that you speak with the tutor using our Messaging system to get further details.
+                            Each tutor on gradeXL Learning set their own cancellation policies. You can view their cancellation policies on their page, under the Profile tab. We recommend that you speak with the tutor using our Messaging system to get further details.
                         </p>
                     </div>
                     <div class="title">
                         <i class="dropdown icon"></i>
-                        12.	What does it mean by Average, Frequent, and Superior responder?
+                        12.	What does it mean by Average, Frequent, and gradeXL responder?
                     </div> <div class="content">
                         <p class="transition ">
                             To be determined.
