--- a/Shikhai/Views/Home/FAQTutors.cshtml
+++ b/Shikhai/Views/Home/FAQTutors.cshtml
@@ -9,7 +9,7 @@
                 <div class="ui styled accordion">
                     <div class="title active">
                         <i class="dropdown icon"></i>
-                        1.	How do I apply to become a tutor on Superior Learning?
+                        1.	How do I apply to become a tutor on gradeXL Learning?
                     </div>
                     <div class="content active">
                         <p class="transition ">
@@ -20,7 +20,7 @@
                     </div>
                     <div class="title">
                         <i class="dropdown icon"></i>
-                        2.	How does Superior Learning work for the tutors?
+                        2.	How does gradeXL Learning work for the tutors?
                     </div>
                     <div class="content">
                         <p class="transition ">
@@ -31,7 +31,7 @@
                             	You select your hourly and package (optional) rates <br>
                             <br>
                             II. Get access to students <br>
-                            	Once approved by us, your profile will be public on Superior Learning. As users search for tutors, your profile will show up in the results. <br>
+                            	Once approved by us, your profile will be public on gradeXL Learning. As users search for tutors, your profile will show up in the results. <br>
                             	If a user is interested in your service, they will leave you a message, which will then be forwarded to your personal email. <br>
                             <br>
                             III. Communicate with student<br>
@@ -102,17 +102,17 @@
                     </div>
                     <div class="title">
                         <i class="dropdown icon"></i>
-                        8.	Does Superior Learning have a fixed commission structure?
+                        8.	Does gradeXL Learning have a fixed commission structure?
                     </div> <div class="content">
                         <p class="transition ">
-                            No. We believe that your share of the earnings should increase as you tutor more hours for Superior Learning. Below is our commission structure.
+                            No. We believe that your share of the earnings should increase as you tutor more hours for gradeXL Learning. Below is our commission structure.
                         </p><table width="400" border="0">
                             <tbody>
                                 <tr>
                                     <td><strong>Hours Worked</strong></td>
                                     <td>
                                         <strong>
-                                            Superior Learning %
+                                            gradeXL Learning %
                                         </strong>
                                     </td>
                                 </tr>
@@ -149,7 +149,7 @@
                     </div>
                     <div class="title">
                         <i class="dropdown icon"></i>
-                        10.	How do I promote myself on Superior Learning?
+                        10.	How do I promote myself on gradeXL Learning?
                     </div> <div class="content">
                         <p class="transition ">
                             There are several things that tutors can do to promote themselves on the site:<br>
