--- a/Shikhai/Views/Home/WhyUs.cshtml
+++ b/Shikhai/Views/Home/WhyUs.cshtml
@@ -5,8 +5,8 @@
                 @Html.Partial("_FAQMenu")
             </div>
             <div class="col-md-9">
-                <h4>Why Superior Learning</h4>
-                <p>At Superior Learning, we offer a unique service where you, the user, have full control for selecting the tutor for yourself or your loved ones. We believe that users should have the ability to select tutors that is their best match in accordance with their needs. With us, you can find, contact, and book sessions with your ideal instructor. <br> <br> This means you will have more time learning and less time worrying. Our job is to ensure that our tutors come from a diverse set of backgrounds, possess the highest level of educational standards, and most importantly, encompass the tutoring qualities required to offer an unrivalled learning experience to individuals of all age groups.</p>
+                <h4>Why gradeXL Learning</h4>
+                <p>At gradeXL Learning, we offer a unique service where you, the user, have full control for selecting the tutor for yourself or your loved ones. We believe that users should have the ability to select tutors that is their best match in accordance with their needs. With us, you can find, contact, and book sessions with your ideal instructor. <br> <br> This means you will have more time learning and less time worrying. Our job is to ensure that our tutors come from a diverse set of backgrounds, possess the highest level of educational standards, and most importantly, encompass the tutoring qualities required to offer an unrivalled learning experience to individuals of all age groups.</p>
             </div>
         </div>
     </div>
