--- a/Shikhai/Views/Home/Contact.cshtml
+++ b/Shikhai/Views/Home/Contact.cshtml
@@ -70,7 +70,7 @@
                     <div class="col-md-12">
                         <div class="c-body">
                             <div class="c-section">
-                                <h3>Shikhai Inc.</h3>
+                                <h3>GradeXL Inc.</h3>
                             </div>
                             <div class="c-section">
                                 <div class="c-content-label uppercase bg-blue">Address</div>
