--- a/Shikhai/Views/Home/Howwork.cshtml
+++ b/Shikhai/Views/Home/Howwork.cshtml
@@ -9,7 +9,11 @@
                 <div class="tg-features how_we_work_page">
                     <div class="col-sm-12">
                         <div class="tg-feature">
-                            <div class="pull-left img_wrap"><img src="http://new.superiorlearning.ca/assets/front/images/icon1.png" alt=""></div>
+                            <div class="pull-left img_wrap">
+
+                                <img src="~/Content/superior/images/icon1.png" />
+
+                            </div>
                             <div class="pull-left desc">
                                 <h3><span class="red">1. </span>Choose</h3>
                                 <div class="tg-description">
@@ -20,7 +24,10 @@
                     </div>
                     <div class="col-sm-12">
                         <div class="tg-feature">
-                            <div class="pull-left img_wrap"><img src="http://new.superiorlearning.ca/assets/front/images/icon2.png" alt=""></div>
+                            <div class="pull-left img_wrap">
+         
+                                <img src="~/Content/superior/images/icon2.png" />
+                            </div>
                             <div class="pull-left desc">
                                 <h3><span class="red">2. </span>Select</h3>
                                 <div class="tg-description">
@@ -31,14 +38,17 @@
                     </div>
                     <div class="col-sm-12">
                         <div class="tg-feature">
-                            <div class="pull-left img_wrap"><img src="http://new.superiorlearning.ca/assets/front/images/icon3.png" alt=""></div>
+                            <div class="pull-left img_wrap">
+                              
+                                <img src="~/Content/superior/images/icon3.png" />
+                            </div>
                             <div class="pull-left desc">
                                 <h3><span class="red">3. </span>Contact</h3>
                                 <div class="tg-description">
                                     <p>Your ideal instructor, send them a message, &amp; book for lessons&nbsp;</p>
                                 </div>
                                 <div class="tg-description">&nbsp;</div>
-                                <div class="tg-description"><a class="red_button" href="https://www.superiorlearning.ca/">Find a Tutor Now!</a></div>
+                                <div class="tg-description"><a class="red_button" href="/Tutors/">Find a Tutor Now!</a></div>
                             </div>
                         </div>
                     </div>
