--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -30,17 +30,17 @@
 </div>
 
 <section class="tg-main-section tg-haslayout tg-parallaximg home_page_header_image_section mainslideshow-height" data-appear-top-offset="600" data-parallax="scroll"
-         data-image-src="https://www.superiorlearning.ca/assets/front/images/parallax/children.jpg" style="height: 817px;">
+         data-image-src="~/Content/images/ShikhaiImages/children.jpg" style="height: 817px;">
 
     <div class="homepage_slider mobilehide" style="position: relative;">
         <img src="/Content/images/ShikhaiImages/pic-01.jpg" class="cycle-slide cycle-sentinel" style="position: static; top: 0px; left: 0px; z-index: 100; opacity: 1;
                 display: block; visibility: hidden; height: 817px;">
 
 
-        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image1.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block;
-            visibility: hidden; height: 817px;"><img src="https://www.superiorlearning.ca/assets/front/images/slider/image2.jpg" class="cycle-slide cycle-slide-active" style="position: absolute; top: 0px;
+        <img src="~/Content/images/ShikhaiImages/image1.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block;
+            visibility: hidden; height: 817px;"><img src="~/Content/images/ShikhaiImages/image2.jpg" class="cycle-slide cycle-slide-active" style="position: absolute; top: 0px;
                 left: 0px; z-index: 99; visibility: visible; height: 817px; opacity: 1; display: block;">
-        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image3.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 97; visibility: hidden; height:
+        <img src="~/Content/images/ShikhaiImages/image3.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 97; visibility: hidden; height:
             817px; opacity: 0; display: block;">
     </div>
     <div class="container">
@@ -51,15 +51,18 @@
                     <h3>Find Private &amp; Affordable Tutoring in the Greater Toronto Area!</h3>
                 </div>
                 <div class="homeage_selectors text-center">
-                    <div class="tri_button " style="background-color:cornflowerblue;"> @*<div class="tri_button active">*@
-                            <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
+                    <div class="tri_button " style="background-color:cornflowerblue;">
+                        @*<div class="tri_button active">*@
+                        <a href="/Teachers/Index">
+                            <img src="~/Content/images/ShikhaiImages/tutor-inperson.png">
                             <span class="head">In-person Tutoring</span>
                             <span class="mobilehide">Register As Student</span>
                             <span class="arrow"></span>
-                        </div>
+                        </a>
+                    </div>
                         <div class="tri_button">
-                            <a href="/Teachers/Index">
-                                <img src="https://www.superiorlearning.ca/assets/front/images/tutor-become.png">
+                            <a href="/Account/Register">
+                                <img src="~/Content/images/ShikhaiImages/tutor-become.png">
                                 <span class="head">Become a Tutor</span>
                                 <span class="mobilehide">Register As Teacher</span>
                                 <span class="arrow"></span>
