--- a/Shikhai/Views/Catalog/_HomePageSearch.cshtml
+++ b/Shikhai/Views/Catalog/_HomePageSearch.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Shikhai.Models.HomePageSearch
+@using Shikhai.Models
 
 @using (Html.BeginForm("Index", "Tutors", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -9,7 +10,8 @@
             <div class="form-group">
                 @*@Html.LabelFor(m => m.SelectedCategoryId, new { @class = "col-md-2 control-label" })*@
                 <div class="col-md-12">
-                    @Html.DropDownListFor(model => model.SelectedCategoryId, Model.Category, "Category", new { @class = "form-control" })
+                    @*@Html.DropDownListFor(model => model.SelectedCategoryId, Model.Category, "Category", new { @class = "form-control" })*@
+                    @Html.DropDownListFor(m => Model.SelectedCategoryId, Model.Category, "Category", new { @id = "doctortypeid", @class = "form-control", @onchange = "FillDoctors()" })
                 </div>
             </div>
         </div>
@@ -24,12 +26,18 @@
             </div>
         </div>
         <div class="col-md-2">
-            <div class="form-group">
-                @*@Html.LabelFor(m => m.SelectedSubjectId, new { @class = "col-md-2 control-label" })*@
-                <div class="col-md-12">
-                    @*@Html.DropDownListFor(model => model.SelectedSubjectId, Model.Subject, "---Select Parent Category---", new { @class = "form-control" })*@
+            <div class="form-group" id="doctorsdiv">
+
+                <div class="col-md-12">              
+                    @Html.Partial("_DoctorsDrop", new SubjectViewModel()
+                       {
+                           SelectedCatId = Model.SelectedCategoryId
+                       })
                 </div>
             </div>
+
+
+
         </div>
         <div class="col-md-2">
             <div class="form-group">
@@ -56,3 +64,17 @@
         <h3 class="text-center col-md-4 col-md-offset-3">or Call <strong>01720-229697</strong></h3>
     </div>
 }
+
+<script>
+
+    function FillDoctors()
+    {
+        var id = $('#doctortypeid').val();
+
+        $("#doctorsdiv").empty();
+        $("#doctorsdiv").load('/Catalog/FillChildCategory', { id: id }, function (responseTxt, statusTxt, xhr) {
+            var doctorselected = $('#doctortypeid :selected').val();
+            console.log("Selected: " + doctorselected);
+        });
+    }
+</script>
