--- a/Shikhai/Views/Shared/_LayoutHead.cshtml
+++ b/Shikhai/Views/Shared/_LayoutHead.cshtml
@@ -172,7 +172,7 @@
 <link href="~/Content/metronic/css/cubeportfolio.css" rel="stylesheet" />
 
 @*loader*@
-<link href="~/Content/normalize.css" rel="stylesheet" />
+@*<link href="~/Content/normalize.css" rel="stylesheet" />*@
 <link href="~/Content/loader.css" rel="stylesheet" />
 <script src="~/Scripts/modernizr-2.6.2.min.js"></script>
 
