--- a/Shikhai/Views/Locations/Delete.cshtml
+++ b/Shikhai/Views/Locations/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Shikhai.Models.Location
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete"; Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Delete</h2>
