--- a/Shikhai/Views/Shared/_Footer.cshtml
+++ b/Shikhai/Views/Shared/_Footer.cshtml
@@ -4,7 +4,7 @@
         <form name="contentForm" enctype="multipart/form-data" method="post" action="">
             <div class="ct-footer-pre text-center-lg">
                 <div class="inner">
-                    <span>Signup to receive updates, news &amp; events!</span>
+                    <span>Stay Updated with our Newsletter</span>
                 </div>
                 <div class="inner">
                     <div class="form-group">
@@ -14,9 +14,10 @@
             </div>
         </form>
 
+
         <div class="ct-footer-meta text-center-sm">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-7">
                     <div class="col-md-6">
                         <ul class="ct-footer-list text-center-sm">
                             <li>
@@ -25,20 +26,18 @@
                                 </h2>
                                 <ul>
                                     <li>
-                                        <a href="">About Us</a>
+                                        <a href="/Home/About">About Us</a>
                                     </li>
                                     <li>
-                                        <a href="">Terms & Conditions</a>
+                                        <a href="/Home/Terms">Terms & Conditions</a>
                                     </li>
                                     <li>
-                                        <a href="">Delivery Information</a>
+                                        <a href="/Home/Information">Information</a>
                                     </li>
                                     <li>
-                                        <a href="">FAQ</a>
+                                        <a href="/Home/FAQStudents">FAQ</a>
                                     </li>
-                                    <li>
-                                        <a href="">How to Place an Order</a>
-                                    </li>
+
                                 </ul>
                             </li>
                         </ul>
@@ -51,19 +50,17 @@
                                 </h2>
                                 <ul>
                                     <li>
-                                        <a href="">Privacy Policy</a>
+                                        <a href="/Home/PrivacyPolicy">Privacy Policy</a>
                                     </li>
                                     <li>
-                                        <a href="">Return Policy</a>
+                                        <a href="/Home/TeacherPolicy">Teacher Policy</a>
                                     </li>
                                     <li>
-                                        <a href="">Replacement Policy</a>
+                                        <a href="/Home/StudentPolicy">Student Policy</a>
                                     </li>
+
                                     <li>
-                                        <a href="">Warranty Policy</a>
-                                    </li>
-                                    <li>
-                                        <a href="">Cookie Policy</a>
+                                        <a href="/Home/CookiePolicy">Cookie Policy</a>
                                     </li>
                                 </ul>
                             </li>
@@ -71,13 +68,16 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-md-2 ct-u-paddingTop10">
-                    <a href="" target="_blank"><img alt="app store" src="https://www.solodev.com/assets/footer/appstore.png"></a>
+                <div class="col-md-2">
+                    <div class="ct-u-paddingTop10">
+                        <a href="" target="_blank"><img alt="app store" src="https://www.solodev.com/assets/footer/appstore.png"></a>
+                    </div>
+                    <div class="ct-u-paddingTop10">
+                        <a href="https://play.google.com/store/apps/details?id=mobileapp.GreenWorld.rasel" target="_blank"><img alt="google play store" src="https://www.solodev.com/assets/footer/androidstore.png"></a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-2 ct-u-paddingTop10">
-                    <a href="https://play.google.com/store/apps/details?id=mobileapp.Shikhai.rasel" target="_blank"><img alt="google play store" src="https://www.solodev.com/assets/footer/androidstore.png"></a>
-                </div>
-                <div class="col-sm-6 col-md-3">
+
+                <div class="col-md-3">
                     <ul class="ct-socials list-unstyled list-inline">
                         <li>
                             <a href="" target="_blank"><img alt="facebook" src="https://www.solodev.com/assets/footer/facebook-white.png"></a>
@@ -98,6 +98,7 @@
                 </div>
             </div>
         </div>
+
     </div>
     <div class="ct-footer-post">
         <div class="container">
@@ -107,7 +108,7 @@
                     <strong>Copyright &copy; 2017-2018 <a href="#">Bangladesh</a>.</strong> All rights reserved.
                 </p>
                 <p class="" style="text-align:right; margin-left:45%;">
-                    <b>Shikhai</b> Your Family Partner
+                    <b>GradeXL</b> Learn with Us. 
                 </p>
             </div>
 
