--- a/Shikhai/Views/Home/WhyUs.cshtml
+++ b/Shikhai/Views/Home/WhyUs.cshtml
@@ -2,7 +2,25 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                @Html.Partial("_FAQMenu")
+                <div class="ui sidebar_nav vertical pointing menu">
+                    <a class="item active" href="/Home/WhyUs">
+                        Why Us
+                        <i class="fa fa-angle-right pull-right"></i>
+                    </a>
+                    <a class="item  " href="/Home/Howwork">
+                        How We Work
+                        <i class="fa fa-angle-right pull-right"></i>
+                    </a>
+                    <a class="item  " href="/Home/FAQStudents">
+                        FAQ for Students
+                        <i class="fa fa-angle-right pull-right"></i>
+                    </a>
+                    <a class="item  " href="/Home/FAQTutors">
+                        FAQ for Tutors
+                        <i class="fa fa-angle-right pull-right"></i>
+                    </a>
+                </div>
+
             </div>
             <div class="col-md-9">
                 <h4>Why gradeXL Learning</h4>
