--- a/Shikhai/Views/Home/_FAQMenu.cshtml
+++ b/Shikhai/Views/Home/_FAQMenu.cshtml
@@ -1,19 +1,18 @@
 ﻿<div class="ui sidebar_nav vertical pointing menu">
-    <a class="item " href="/WhyUs">
+    <a class="item " href="/Home/WhyUs">
         Why Us
         <i class="fa fa-angle-right pull-right"></i>
     </a>
-    <a class="item active " href="/Howwork">
+    <a class="item active " href="/Home/Howwork">
         How We Work
         <i class="fa fa-angle-right pull-right"></i>
     </a>
-    <a class="item  " href="/FAQStudents">
+    <a class="item  " href="/Home/FAQStudents">
         FAQ for Students
         <i class="fa fa-angle-right pull-right"></i>
     </a>
-    <a class="item  " href="/FAQTutors">
+    <a class="item  " href="/Home/FAQTutors">
         FAQ for Tutors
         <i class="fa fa-angle-right pull-right"></i>
-    </a>
-  
+    </a>  
 </div>
