--- a/Shikhai/Views/Ranges/Create.cshtml
+++ b/Shikhai/Views/Ranges/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Shikhai.Models.Range
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create"; Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Create</h2>
