--- a/Shikhai/Views/Ranges/Edit.cshtml
+++ b/Shikhai/Views/Ranges/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Shikhai.Models.Range
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit"; Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Edit</h2>
