--- a/Shikhai/Views/Ranges/Index.cshtml
+++ b/Shikhai/Views/Ranges/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Shikhai.Models.Range>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Index"; Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Index</h2>
