--- a/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
+++ b/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
@@ -150,7 +150,7 @@
                         </a>
                     </li>
                     <li class="nav-item  ">
-                        <a href="@Url.Action("Index", "Teachers")">
+                        <a href="@Url.Action("List", "Teachers")">
                             <i class="icon-check"></i>
                             <span class="title">Teachers</span>
                             <span class="badge badge-success">6</span>
