--- a/Shikhai/Views/Testimonials/Details.cshtml
+++ b/Shikhai/Views/Testimonials/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Shikhai.Models.Testimonial
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Details"; Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Details</h2>
