--- a/Shikhai/Views/Account/RegisterTeacher.cshtml
+++ b/Shikhai/Views/Account/RegisterTeacher.cshtml
@@ -9,7 +9,7 @@
         <h4>Create a new account as teacher.</h4>
     </div>
     <div class="col-md-4">
-        <a href=" @Url.Action("Register", "Account", new { })">Register as Member</a>
+        <a href=" @Url.Action("Register", "Account", new { })">Register as Student</a>
     </div>
 </div>
 
