--- a/Shikhai/Views/Shared/_Footer.cshtml
+++ b/Shikhai/Views/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="black" style="background-color:black;">
+﻿<footer class="black" style="background-color:black; display:none; " >
     <div class="container">
 
         <form name="contentForm" enctype="multipart/form-data" method="post" action="">
@@ -112,6 +112,116 @@
                 </p>
             </div>
 
+        </div>
+    </div>
+</footer>
+
+<style>
+
+    .bgColorFooter {
+        background-color: #062E57;
+    }
+
+</style>
+
+<footer id="tg-footer" class="tg-footer tg-haslayout">
+    <div class="tg-infobox bgColorFooter">
+
+        <form name="contentForm" enctype="multipart/form-data" method="post" action="">
+            <div class="ct-footer-pre text-center-lg">
+                <div class="inner">
+                    <span>Stay Updated with our Newsletter</span>
+                </div>
+                <div class="inner">
+                    <div class="form-group">
+                        <input name="formfields[nl_email]" id="nl_email" class="validate[required]" placeholder="Enter your email address" type="text" value=""> <label for="nl_email" class="sr-only">Email Address</label> <button type="submit" class="btn btn-motive">Join</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div class="tg-quicklinks bgColorFooter">
+        <div class="container">
+            <div class="row">
+                <div class="tg-fcols footer_commun">
+                    <div class="col-sm-3 col-xs-6">
+                        <div class="">
+                            <div class="tg-title tg-icon">
+                                <h3 class="">COMPANY</h3>
+                            </div>
+                            <ul>
+                                <li><a href="/Home/About">About Us</a></li>
+                                <li><a href="/Home/Howwork">How we work</a></li>
+                                <li><a href="/about/testimonials">Testimonials</a></li>
+                                <li><a href="/Teachers/Index">Become a Tutor</a></li>
+                                <li><a href="/Home/contact">Contact Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-xs-6">
+                        <div class="">
+                            <div class="tg-title tg-icon">
+                                <h3 class="">RESOURCES</h3>
+                            </div>
+                            <ul>
+                                <li><a href="/Home/FAQStudents">Student FAQ</a></li>
+                                <li><a href="/Home/FAQTutors">Tutor FAQ</a></li>
+
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-xs-6">
+                        <div class="">
+                            <div class="tg-title tg-icon">
+                                <h3 class="">TERMS &amp; CONDITIONS</h3>
+                            </div>
+                            <ul>
+                                <li><a href=""/Home/terms">Terms of Use</a></li>
+                                <li><a href="/Home/privacyPolicy">Privacy Policy</a></li>
+                                <li><a href="/Home/studentPaymentPolicy">Student Payment Policy</a></li>
+                                <li><a href="/Home/tutorPaymentPolicy">Tutor Payment Policy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-xs-6">
+                        <div class="">
+                            <div class="tg-title tg-icon">
+                                <h3 class="">CONNECT</h3>
+                            </div>
+                            <ul class="social_icons">
+                                <li class=""><a href="https://www.facebook.com/superiorlearning"><i class="fa fa-facebook"></i></a></li>
+                                <li class=""><a href="https://www.instagram.com/superior.learning/"><i class="fa fa-instagram"></i></a></li>
+                                <li class=""><a href="https://www.linkedin.com/company-beta/10087736"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="tg-footerbar footer_subject_listing bgColorFooter">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-xs-12">
+                    <div class="col-md-6">
+                        <span class="tg-copyright">© 2017 GradeXL Learning, All Rights Reserved.</span>
+                    </div>
+
+                    <div class="col-md-6">
+                        <nav id="tg-footernav" class="tg-footernav">
+                            <ul>
+                                <li><a href="">Sitemap</a></li>
+                                <li><a href="/Home/terms">Terms of use</a></li>
+                                <li><a href="/Home/privacyPolicy">Privacy Policy</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+
+
+                </div>
+            </div>
         </div>
     </div>
 </footer>
