--- a/Shikhai/Views/Books/Delete.cshtml
+++ b/Shikhai/Views/Books/Delete.cshtml
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Products</h4>
+    <h4>Books</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
