--- a/Shikhai/Views/Books/Index.cshtml
+++ b/Shikhai/Views/Books/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Books</h2>
 <div class="row">
     <div class="col-md-2">
         <span>
