--- a/Shikhai/Views/Shared/_TopMenu.cshtml
+++ b/Shikhai/Views/Shared/_TopMenu.cshtml
@@ -27,7 +27,7 @@
                                 <a href='/Students/Dashboard'>Student Panel</a>
                             </li>
                         }
-                        <li><a href='/Home/About'>Become a Tutor</a></li>
+                        <li><a href='/Teachers/Index'>Become a Tutor</a></li>
                         <li>
                             <a href='#'>ABOUT</a>
                             <ul>
