--- a/Shikhai/Views/Stationaries/Create.cshtml
+++ b/Shikhai/Views/Stationaries/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Products</h4>
+    <h4>Stationaries</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
