--- a/Shikhai/Views/Shared/_Footer.cshtml
+++ b/Shikhai/Views/Shared/_Footer.cshtml
@@ -126,7 +126,14 @@
 
 <footer id="tg-footer" class="tg-footer tg-haslayout">
     <div class="tg-infobox bgColorFooter">
-
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-offset-4 col-md-4" >
+                    <img src="~/Content/superior/images/Logo.png" />
+                </div>
+            </div>
+        </div>
+     
         <form name="contentForm" enctype="multipart/form-data" method="post" action="">
             <div class="ct-footer-pre text-center-lg">
                 <div class="inner">
