--- a/Shikhai/Views/Shared/_Footer.cshtml
+++ b/Shikhai/Views/Shared/_Footer.cshtml
@@ -1,122 +1,4 @@
-﻿<footer class="black" style="background-color:black; display:none; " >
-    <div class="container">
-
-        <form name="contentForm" enctype="multipart/form-data" method="post" action="">
-            <div class="ct-footer-pre text-center-lg">
-                <div class="inner">
-                    <span>Stay Updated with our Newsletter</span>
-                </div>
-                <div class="inner">
-                    <div class="form-group">
-                        <input name="formfields[nl_email]" id="nl_email" class="validate[required]" placeholder="Enter your email address" type="text" value=""> <label for="nl_email" class="sr-only">Email Address</label> <button type="submit" class="btn btn-motive">Join</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-
-
-        <div class="ct-footer-meta text-center-sm">
-            <div class="row">
-                <div class="col-md-7">
-                    <div class="col-md-6">
-                        <ul class="ct-footer-list text-center-sm">
-                            <li>
-                                <h2 class="ct-footer-list-header">
-                                    Learn More
-                                </h2>
-                                <ul>
-                                    <li>
-                                        <a href="/Home/About">About Us</a>
-                                    </li>
-                                    <li>
-                                        <a href="/Home/Terms">Terms & Conditions</a>
-                                    </li>
-                                    <li>
-                                        <a href="/Home/Information">Information</a>
-                                    </li>
-                                    <li>
-                                        <a href="/Home/FAQStudents">FAQ</a>
-                                    </li>
-
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <ul class="ct-footer-list text-center-sm">
-                            <li>
-                                <h2 class="ct-footer-list-header">
-                                    Policy
-                                </h2>
-                                <ul>
-                                    <li>
-                                        <a href="/Home/PrivacyPolicy">Privacy Policy</a>
-                                    </li>
-                                    <li>
-                                        <a href="/Home/TeacherPolicy">Teacher Policy</a>
-                                    </li>
-                                    <li>
-                                        <a href="/Home/StudentPolicy">Student Policy</a>
-                                    </li>
-
-                                    <li>
-                                        <a href="/Home/CookiePolicy">Cookie Policy</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-md-2">
-                    <div class="ct-u-paddingTop10">
-                        <a href="" target="_blank"><img alt="app store" src="https://www.solodev.com/assets/footer/appstore.png"></a>
-                    </div>
-                    <div class="ct-u-paddingTop10">
-                        <a href="https://play.google.com/store/apps/details?id=mobileapp.GreenWorld.rasel" target="_blank"><img alt="google play store" src="https://www.solodev.com/assets/footer/androidstore.png"></a>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <ul class="ct-socials list-unstyled list-inline">
-                        <li>
-                            <a href="" target="_blank"><img alt="facebook" src="https://www.solodev.com/assets/footer/facebook-white.png"></a>
-                        </li>
-                        <li>
-                            <a href="" target="_blank"><img alt="twitter" src="https://www.solodev.com/assets/footer/twitter-white.png"></a>
-                        </li>
-                        <li>
-                            <a href="" target="_blank"><img alt="youtube" src="https://www.solodev.com/assets/footer/youtube-white.png"></a>
-                        </li>
-                        <li>
-                            <a href="" target="_blank"><img alt="instagram" src="https://www.solodev.com/assets/footer/instagram-white.png"></a>
-                        </li>
-                        <li>
-                            <a href="" target="_blank"><img alt="pinterest" src="https://www.solodev.com/assets/footer/pinterest-white.png"></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <div class="ct-footer-post">
-        <div class="container">
-
-            <div class="" style="">
-                <p>
-                    <strong>Copyright &copy; 2017-2018 <a href="#">Bangladesh</a>.</strong> All rights reserved.
-                </p>
-                <p class="" style="text-align:right; margin-left:45%;">
-                    <b>GradeXL</b> Learn with Us. 
-                </p>
-            </div>
-
-        </div>
-    </div>
-</footer>
-
-<style>
+﻿<style>
 
     .bgColorFooter {
         background-color: #062E57;
@@ -211,22 +93,24 @@
     <div class="tg-footerbar footer_subject_listing bgColorFooter">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-xs-12">
+                <div class="col-md-12 ">
                     <div class="col-md-6">
-                        <span class="tg-copyright">© 2017 GradeXL Learning, All Rights Reserved.</span>
+                        <span class="tg-copyright1" style="color: #fff;">© 2017 GradeXL Learning, All Rights Reserved.</span>
                     </div>
 
                     <div class="col-md-6">
-                        <nav id="tg-footernav" class="tg-footernav">
-                            <ul>
-                                <li><a href="">Sitemap</a></li>
-                                <li><a href="/Home/terms">Terms of use</a></li>
-                                <li><a href="/Home/privacyPolicy">Privacy Policy</a></li>
+                        <nav id="tg-footernav1" class="tg-footernav1" style="font: 400 13px/16px 'Montserrat', Arial, Helvetica, sans-serif;padding: 0;
+    text-decoration: none;">
+                            <ul style="    width: 100%;
+    /* float: left; */
+    list-style: none;
+    line-height: inherit;    margin-bottom: 10px;">
+                                <li style="list-style-type:none;color:white;float:left; padding: 0 20px 0 0px;    line-height: inherit;"><a href="">Sitemap</a></li>
+                                <li style="list-style-type:none;color:white;float:left; padding: 0 20px 0 0px;    line-height: inherit;"><a href="/Home/terms">Terms of use</a></li>
+                                <li style="list-style-type:none;color:white;float:left; padding: 0 20px 0 0px;    line-height: inherit;"><a href="/Home/privacyPolicy">Privacy Policy</a></li>
                             </ul>
                         </nav>
                     </div>
-
-
                 </div>
             </div>
         </div>
