--- a/Shikhai/Views/Catalog/_HomePageSearch.cshtml
+++ b/Shikhai/Views/Catalog/_HomePageSearch.cshtml
@@ -58,7 +58,7 @@
     </div>
 
     <div class="form-group action_button" style="margin-top:10px;">
-        <button class="button search_button text-center col-md-4 col-md-offset-3">FIND A TUTOR NOW!</button>
+        <button class="button search_button text-center col-md-4 col-md-offset-3 red_button">FIND A TUTOR NOW!</button>
     </div>
     <div style="margin-top:10px;">
         <h3 class="text-center col-md-4 col-md-offset-3">or Call <strong>01720-229697</strong></h3>
